docs/references/1.6.x/models/consoleVariables.md
# Console Variables

Console Variables

## Properties

| Name | Type | Description |
|------|------|-------------|
| _APP_DOMAIN_TARGET | string | CNAME target for your Appwrite custom domains. |
| _APP_STORAGE_LIMIT | integer | Maximum file size allowed for file upload in bytes. |
| _APP_FUNCTIONS_SIZE_LIMIT | integer | Maximum file size allowed for deployment in bytes. |
| _APP_USAGE_STATS | string | Defines if usage stats are enabled. This value is set to 'enabled' by default, to disable the usage stats set the value to 'disabled'. |
| _APP_VCS_ENABLED | boolean | Defines if VCS (Version Control System) is enabled. |
| _APP_DOMAIN_ENABLED | boolean | Defines if main domain is configured. If so, custom domains can be created. |
| _APP_ASSISTANT_ENABLED | boolean | Defines if AI assistant is enabled. |

## Example

### REST

```json
{}
```

### GraphQL

```json
{}
```

